# source-board-crates

./: .gitignore  Cargo.toml  Dockerfile  README.md  azure.yaml  sample.env
.devcontainer/: devcontainer.json
.github/workflows/: api-postgres-source-board.yaml  azure-dev.yml  deploy_to_aca.yaml  github-log-pg.yaml  github-log.yaml
crates/api-postgres-source-board/: Cargo.toml  Dockerfile  README.md  db.sql
crates/api-postgres-source-board/infra/: main.bicep  main.parameters.json
crates/api-postgres-source-board/infra/app/: rustserver-aca-azd-port-3000.bicep
crates/api-postgres-source-board/scripts/: build-and-deploy.sh  cicd-acr-push.sh  create-container-app.sh  create-sp-for-github-secret.sh  deploy.sh  env-vars.sh  set-neon-database-url.sh
crates/api-postgres-source-board/scripts/old/: delete-secrets.sh  github-repo.sh  resource-groups.sh  resources-in-group.sh  set-containerapp-registry.sh
crates/api-postgres-source-board/src/: main.rs
crates/api-postgres-source-board/src/route/: create.rs.unused  error.rs  mod.rs  models.rs  read.rs  root.rs  schema.rs
crates/github-data-graphql/: Cargo.toml  Dockerfile  README.md  cargo_run.sh  entrypoint.sh  example_result.json  repo.graphql  sample.env
crates/github-data-graphql-database/: CHANGELOG.md  Cargo.toml  README.md  compose.yaml
crates/github-data-graphql-database-pg/: CHANGELOG.md  Cargo.toml  compose.yaml  diesel.toml  sample.env
crates/github-data-graphql-database-pg/docs/: troubleshooting.md
crates/github-data-graphql-database-pg/src/: diesel_schema.rs  github_query.rs  graphql_query.rs  logfile_model.rs  main.rs  models.rs  pq_query.rs  watch_model.rs
crates/github-data-graphql-database/src/: diesel_schema.rs  main.rs  mongo_query.rs  pq_query.rs
crates/github-data-graphql/src/: main.rs  models.rs  query.rs
crates/server-diesel-async-ormless/: Cargo.toml
crates/server-diesel-async-ormless/http/: insert.http
crates/server-diesel-async-ormless/src/: main.rs
http/: list.http
infra/: main.bicep  main.parameters.json  web.bicep
scripts/: create-resources.sh  create-sp-for-github-secret.sh  delete-secrets.sh  dfberry-azure-notes-repo.json  get-ingress-url.sh  getVaultKey.sh  ingres-settings.sh  set-secrets.sh
src/route/: mod.rs
