[package]
name = "server-diesel-async-ormless"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
diesel = "2.2.4"
diesel-async = { version = "0.5.0", features = ["bb8", "postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
serde_derive = "1.0.209"
rand = "0.8"
